fix(StkTable): 修复页脚z-index值以确保正确显示
将页脚的z-index从1调整为2，确保其在页面中能够正确显示在其它元素之上

--- a/src/StkTable/style.less
+++ b/src/StkTable/style.less
@@ -423,7 +423,7 @@
     .stk-footer {
         position: sticky;
         bottom: 0;
-        z-index: 1;
+        z-index: 2;
         tr {
             background-color: var(--tf-bgc);
             height: var(--footer-row-height);
